Map page columns the correct way round, custom scrollbar added for museums list, padding issues resolved

--- a/front-end/src/styles/main.css
+++ b/front-end/src/styles/main.css
@@ -194,9 +194,10 @@ nav {
 }
 /* Map */
 
-/* .map-columns {
-  height: 100vh;
-} */
+#map-column {
+  padding: 0;
+  /* box-sizing: border-box; */
+}
 
 .map-container {
   height: 90vh;
@@ -205,12 +206,58 @@ nav {
 
 .map-list-container {
   max-height: 90vh;
-  padding: 0;
+  /* padding: -100px; */
   overflow-y: auto;
 }
 
+.map-list-container::-webkit-scrollbar {
+  width: 22px;
+}
+
+.map-list-container::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  background: pink;
+  border-radius: 8px;
+}
+
+.map-list-container::-webkit-scrollbar-thumb {
+  background: rgb(0, 153, 255); 
+  border-radius: 8px;
+}
+
+.map-list-container::-webkit-scrollbar-thumb:hover {
+  background: #b30000; 
+}
+
+/* width */
+/* ::-webkit-scrollbar {
+  width: 20px;
+} */
+
+/* Track */
+/* ::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+} */
+
+/* Handle */
+/* ::-webkit-scrollbar-thumb {
+  background: red; 
+  border-radius: 10px;
+} */
+
+/* Handle on hover */
+/* ::-webkit-scrollbar-thumb:hover {
+  background: #b30000; 
+} */
+
+
 #map-card-container {
   width: 170px;
+}
+
+.museum-list-card, .map-icon {
+  cursor: pointer;
 }
 
 /* Register and Login */
